Pokusaj deploy na GitHub pages - pokusaj 2

--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "build": "vite build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
